--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "uuid": "^8.3.2",
     "vue": "^3.0.0",
+    "vue-draggable-next": "^2.1.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
